Fixed overlap issue

--- a/src/Tools.css
+++ b/src/Tools.css
@@ -1,10 +1,12 @@
 .wire-container {
+  position: absolute;
   height: 100vh;
   width: 100vw;
 }
 
 .wire {
-  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .pin {
